--- a/josh_header_files/input/input_1.in
+++ b/josh_header_files/input/input_1.in
@@ -5,8 +5,8 @@ set Third input parameter = 3.0
 subsection initial conditions
    set initial conditions 0 = 0
    set initial conditions 1 = 0
-   set initial conditions 2 = 0
-   set initial conditions 3 = 0
+   set initial conditions 2 = 10*(x<-0.7)*(y> 0.3)*(y< 0.45) + (1-(x<-0.7)*(y> 0.3)*(y< 0.45))*1.0
+   set initial conditions 3 = (1.5-(1.0*1.0*y))/0.4
 end
 
 subsection nonlinear solver
