--- a/josh_header_files/input/burgers_1.in
+++ b/josh_header_files/input/burgers_1.in
@@ -1,10 +1,21 @@
+subsection finite element
+   set degree = 2
+end
+
 subsection time
-   set final time = 1
-   set time step size = 1e-2
+   set final time = 0.25
+   set time step size = 1e-4
 end
 
 subsection initial conditions
-   set initial conditions 0 = 0
+   set initial conditions 0 = 1 - cos(x)
+end
+
+subsection artificial viscosity
+   set viscosity type = constant
+   set constant viscosity value = 1e-5
+   set first order viscosity coefficient = 1.0
+   set entropy viscosity coefficient = 1.0
 end
 
 subsection temporal integration
