--- a/josh_header_files/input/burgers_1.in
+++ b/josh_header_files/input/burgers_1.in
@@ -13,7 +13,7 @@ subsection initial conditions
 end
 
 subsection artificial viscosity
-   set viscosity type = none
+   set viscosity type = first_order
    set constant viscosity value = 1e-5
    set first order viscosity coefficient = 1.0
    set entropy viscosity coefficient = 1.0
