fixed transient and ss residual

--- a/josh_header_files/input/burgers_1.in
+++ b/josh_header_files/input/burgers_1.in
@@ -2,14 +2,19 @@ subsection finite element
    set degree = 1
 end
 
+subsection domain
+   set domain width = 1.0
+   set number of boundaries = 2
+end
+
 subsection refinement
    set initial refinement level = 5
 end
 
 subsection time
    # options are <constant|cfl_condition>
-   set time step size method = constant
-   set final time = 0.100 
+   set time step size method = cfl_condition
+   set final time = 0.300 
    set time step size = 0.001
    set cfl = 0.5
 end
@@ -20,10 +25,10 @@ end
 
 subsection artificial viscosity
    # options are <none|constant|first_order>
-   set viscosity type = constant
+   set viscosity type = first_order
    set constant viscosity value = 0.02
-   set first order viscosity coefficient = 1.0
-   set entropy viscosity coefficient = 1.0
+   set first order viscosity coefficient = 0.5
+   set entropy viscosity coefficient = 15.0
 end
 
 subsection temporal integration
@@ -53,4 +58,5 @@ end
 
 subsection output
    set output period = 0
+   set output mass matrix = false
 end
