--- a/josh_header_files/input/burgers_1.in
+++ b/josh_header_files/input/burgers_1.in
@@ -13,7 +13,7 @@ end
 
 subsection time
    # options are <constant_dt|cfl_condition>
-   set time step size method = cfl_condition
+   set time step size method = constant_dt
    set final time = 0.300 
    set time step size = 0.001
    set cfl = 0.5
@@ -25,7 +25,7 @@ end
 
 subsection artificial viscosity
    # options are <none|constant|first_order|entropy>
-   set viscosity type = none
+   set viscosity type = entropy
    set constant viscosity value = 0.02
    set first order viscosity coefficient = 0.5
    set entropy viscosity coefficient = 1.0
@@ -35,7 +35,7 @@ end
 subsection temporal integration
    # options are <erk>
    set temporal integrator = erk
-   set erk stages = 3
+   set erk stages = 1
 end
 
 # this section is not yet applicable
