--- a/josh_header_files/input/burgers_1.in
+++ b/josh_header_files/input/burgers_1.in
@@ -7,7 +7,8 @@ subsection problem
 end
 
 subsection refinement
-   set initial refinement level = 5
+   set initial refinement level = 4
+   set refinement cycles = 3
 end
 
 subsection time
