--- a/dealii/input/burgers_2.in
+++ b/dealii/input/burgers_2.in
@@ -7,18 +7,18 @@ subsection problem
 end
 
 subsection refinement
-   set initial refinement level = 7
-   set refinement cycles = 1
+   set initial refinement level = 4
+   set refinement cycles = 3
    set refinement fraction = 0.3
    set coarsening fraction = 0.03
 end
 
 subsection time
    # options are <constant_dt|cfl_condition>
-   set time step size method = cfl_condition
+   set time step size method = constant_dt
    set final time = 0.500 
    set time step size = 0.001
-   set cfl = 0.1
+   set cfl = 0.15
 end
 
 subsection artificial viscosity
@@ -27,7 +27,7 @@ subsection artificial viscosity
    set constant viscosity value = 0.02
    set first order viscosity coefficient = 0.5
    set entropy viscosity coefficient = 1.0
-   set add jumps = true
+   set add jumps = false
 end
 
 subsection temporal integration
