--- a/dealii/CMakeLists.txt
+++ b/dealii/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##
-#  CMake script for the step-7 tutorial program:
+#  CMake script:
 ##
 
 # Set the name of the project and target:
@@ -17,7 +17,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
 
 FIND_PACKAGE(deal.II 8.0 QUIET
   HINTS
-    ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ ../../../ ../../../../../ $ENV{DEAL_II_DIR}
+    ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ ../../../ ../../../../../ ../../soft/deal.ii_dev/installed/ $ENV{DEAL_II_DIR}
   #
   # If the deal.II library cannot be found (because it is not installed at a
   # default location or your project resides at an uncommon place), you
