--- a/dealii/input/burgers_2.in
+++ b/dealii/input/burgers_2.in
@@ -8,17 +8,17 @@ end
 
 subsection refinement
    set initial refinement level = 4
-   set refinement cycles = 3
-   set refinement fraction = 0.3
+   set refinement cycles = 4
+   set refinement fraction = 0.5
    set coarsening fraction = 0.03
 end
 
 subsection time
    # options are <constant_dt|cfl_condition>
-   set time step size method = constant_dt
+   set time step size method = cfl_condition
    set final time = 0.500 
    set time step size = 0.001
-   set cfl = 0.15
+   set cfl = 0.1
 end
 
 subsection artificial viscosity
