--- a/dealii/input/euler_1.in
+++ b/dealii/input/euler_1.in
@@ -2,28 +2,32 @@ subsection finite element
    set degree = 1
 end
 
+subsection quadrature
+   set number of quadrature points = 3
+end
+
 subsection problem
    set problem id = 0
 end
 
 subsection refinement
    set initial refinement level = 4
-   set refinement cycles = 6
+   set refinement cycles = 1
    set refinement fraction = 0.3
    set coarsening fraction = 0.03
 end
 
 subsection time
    # options are <constant_dt|cfl_condition>
-   set time step size method = cfl_condition
-   set final time = 0.300 
+   set time step size method = constant_dt
+   set final time = 0.25 
    set time step size = 0.001
    set cfl = 0.25
 end
 
 subsection artificial viscosity
    # options are <none|constant|first_order|entropy>
-   set viscosity type = entropy
+   set viscosity type = none
    set constant viscosity value = 0.02
    set first order viscosity coefficient = 0.5
    set entropy viscosity coefficient = 1.0
