--- a/dealii/input/burgers_2.in
+++ b/dealii/input/burgers_2.in
@@ -31,6 +31,7 @@ subsection artificial viscosity
    set constant viscosity value = 0.02
    set first order viscosity coefficient = 0.25
    set entropy viscosity coefficient = 1.0
+   set jump coefficient = 1.0
    set add jumps = true
 end
 
