--- a/dealii/input/euler_1.in
+++ b/dealii/input/euler_1.in
@@ -22,13 +22,13 @@ subsection time
    set time step size method = cfl_condition
    set final time = 0.10 
    set time step size = 0.0001
-   set cfl = 0.25
+   set cfl = 0.10
 end
 
 subsection artificial viscosity
    # options are <none|constant|first_order|entropy>
-   set viscosity type = none
-   set constant viscosity value = 0.0005
+   set viscosity type = constant
+   set constant viscosity value = 0.005
    set first order viscosity coefficient = 10.0
    set entropy viscosity coefficient = 1.0
    set jump coefficient = 1.0
@@ -39,7 +39,7 @@ subsection temporal integration
    # options are <runge_kutta>
    set temporal integrator = runge_kutta
    # options are <erk1|erk2|erk3|erk4>
-   set runge kutta method = erk3
+   set runge kutta method = erk1
 end
 
 # this section is not yet applicable
