--- a/dealii/input/euler_1.in
+++ b/dealii/input/euler_1.in
@@ -15,7 +15,7 @@ subsection numerics
 end
 
 subsection refinement
-   set initial refinement level = 6
+   set initial refinement level = 5
    set refinement cycles = 1
    set refinement fraction = 0.3
    set coarsening fraction = 0.03
@@ -23,27 +23,27 @@ end
 
 subsection time
    # options are <constant_dt|cfl_condition>
-   set time step size method = constant_dt
-   set final time = 0.10 
+   set time step size method = cfl_condition
+   set final time = 0.25 
    set time step size = 0.0001
    set cfl = 0.10
 end
 
 subsection artificial viscosity
    # options are <none|constant|first_order_1|first_order_2|entropy>
-   set viscosity type = entropy
+   set viscosity type = first_order_1
    set constant viscosity value = 0.005
    set first order viscosity coefficient = 0.1
    set entropy viscosity coefficient = 5.0
    set jump coefficient = 1.0
-   set add jumps = true
+   set add jumps = false
 end
 
 subsection temporal integration
    # options are <runge_kutta>
    set temporal integrator = runge_kutta
    # options are <erk1|erk2|erk3|erk4|sdirk22>
-   set runge kutta method = erk1
+   set runge kutta method = erk2
 end
 
 # this section is not yet applicable
