--- a/dealii/input/burgers_2.in
+++ b/dealii/input/burgers_2.in
@@ -11,8 +11,8 @@ subsection problem
 end
 
 subsection refinement
-   set initial refinement level = 4
-   set refinement cycles = 1
+   set initial refinement level = 1
+   set refinement cycles = 4
    set refinement fraction = 0.5
    set coarsening fraction = 0.01
 end
@@ -20,14 +20,14 @@ end
 subsection time
    # options are <constant_dt|cfl_condition>
    set time step size method = cfl_condition
-   set final time = 0.200 
+   set final time = 0.5 
    set time step size = 0.001
    set cfl = 0.20
 end
 
 subsection artificial viscosity
-   # options are <none|constant|first_order|entropy>
-   set viscosity type = entropy
+   # options are <none|constant|first_order_1|first_order_2|entropy>
+   set viscosity type = first_order_1
    set constant viscosity value = 0.02
    set first order viscosity coefficient = 0.25
    set entropy viscosity coefficient = 1.0
@@ -42,7 +42,6 @@ subsection temporal integration
    set runge kutta method = erk1
 end
 
-# this section is not yet applicable
 subsection nonlinear solver
    set nonlinear verbosity = verbose
    set nonlinear method = newton
