--- a/euler/input/euler_1.in
+++ b/euler/input/euler_1.in
@@ -8,7 +8,7 @@ end
 
 subsection problem
    # options are: 0: 1-D shock tube
-   #              1: 1-D modified shock tube
+   #              1: 1-D Leblanc shock tube
    #              2: 2-D Noh problem
    set problem id = 0
 end
@@ -27,14 +27,14 @@ end
 subsection time
    # options are <constant_dt|cfl_condition>
    set time step size method = cfl_condition
-   set final time = 0.25 
+   set final time = 0.10 #0.25 
    set time step size = 0.0001
    set cfl = 0.50
 end
 
 subsection artificial viscosity
    # options are <none|constant|old_first_order|max_principle|entropy>
-   set viscosity type = old_first_order
+   set viscosity type = none
    set constant viscosity value = 0.005
    set first order viscosity coefficient = 0.1
    set entropy viscosity coefficient = 5.0
