made bathymetry an FE function

--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -41,3 +41,17 @@ DEAL_II_SETUP_TARGET(euler)
 
 ADD_EXECUTABLE(shallowwater shallowwater.cc)
 DEAL_II_SETUP_TARGET(shallowwater)
+
+# add debug target
+ADD_CUSTOM_TARGET(debug
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
+  COMMENT "Switch CMAKE_BUILD_TYPE to Debug"
+  )
+
+# add release target
+ADD_CUSTOM_TARGET(release
+  COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
+  COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
+  COMMENT "Switch CMAKE_BUILD_TYPE to Release"
+  )
