--- a/euler/.gitignore
+++ b/euler/.gitignore
@@ -2,10 +2,12 @@ CMakeCache.txt
 CMakeFiles
 Makefile
 cmake_install.cmake
-euler
 burgers
+burgers_parallel
+euler
+euler_parallel
 shallowwater
+shallowwater_parallel
 html
 latex
-rm_out
 *.bak
