started adding diffusion classes

--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -34,25 +34,31 @@ DEAL_II_INITIALIZE_CACHED_VARIABLES()
 PROJECT(myproject)
 
 # serial targets
-ADD_EXECUTABLE(burgers burgers.cc)
+ADD_EXECUTABLE(burgers main.cc)
+TARGET_COMPILE_DEFINITIONS(burgers PRIVATE BURGERS)
 DEAL_II_SETUP_TARGET(burgers)
 
-ADD_EXECUTABLE(euler euler.cc)
+ADD_EXECUTABLE(euler main.cc)
+TARGET_COMPILE_DEFINITIONS(euler PRIVATE EULER)
 DEAL_II_SETUP_TARGET(euler)
 
-ADD_EXECUTABLE(shallowwater shallowwater.cc)
+ADD_EXECUTABLE(shallowwater main.cc)
+TARGET_COMPILE_DEFINITIONS(shallowwater PRIVATE SHALLOWWATER)
 DEAL_II_SETUP_TARGET(shallowwater)
 
 # parallel targets
-ADD_EXECUTABLE(burgers_parallel burgers.cc)
+ADD_EXECUTABLE(burgers_parallel main.cc)
+TARGET_COMPILE_DEFINITIONS(burgers_parallel PRIVATE BURGERS)
 TARGET_COMPILE_DEFINITIONS(burgers_parallel PRIVATE IS_PARALLEL)
 DEAL_II_SETUP_TARGET(burgers_parallel)
 
-ADD_EXECUTABLE(euler_parallel euler.cc)
+ADD_EXECUTABLE(euler_parallel main.cc)
+TARGET_COMPILE_DEFINITIONS(euler_parallel PRIVATE EULER)
 TARGET_COMPILE_DEFINITIONS(euler_parallel PRIVATE IS_PARALLEL)
 DEAL_II_SETUP_TARGET(euler_parallel)
 
-ADD_EXECUTABLE(shallowwater_parallel euler.cc)
+ADD_EXECUTABLE(shallowwater_parallel main.cc)
+TARGET_COMPILE_DEFINITIONS(shallowwater_parallel PRIVATE SHALLOWWATER)
 TARGET_COMPILE_DEFINITIONS(shallowwater_parallel PRIVATE IS_PARALLEL)
 DEAL_II_SETUP_TARGET(shallowwater_parallel)
 
