work on entropy classes and fixed unit testing

--- a/euler/tests/quadrature/CMakeLists.txt
+++ b/euler/tests/quadrature/CMakeLists.txt
@@ -1,3 +1,4 @@
 ADD_EXECUTABLE(quadrature quadrature.cc)
 DEAL_II_SETUP_TARGET(quadrature)
-ADD_TEST(quadrature quadrature)
+SET(TEST_TARGET quadrature)
+DEAL_II_PICKUP_TESTS()
