--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -33,6 +33,13 @@ DEAL_II_INITIALIZE_CACHED_VARIABLES()
 
 PROJECT(myproject)
 
+# a
+SET(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+CONFIGURE_FILE(
+  "${PROJECT_SOURCE_DIR}/CMakeVars.h.in"
+  "${PROJECT_BINARY_DIR}/CMakeVars.h")
+INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
+
 # serial targets
 ADD_EXECUTABLE(burgers main.cc)
 TARGET_COMPILE_DEFINITIONS(burgers PRIVATE BURGERS)
@@ -75,3 +82,8 @@ ADD_CUSTOM_TARGET(release
   COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
   COMMENT "Switch CMAKE_BUILD_TYPE to Release"
   )
+
+ENABLE_TESTING()
+ADD_SUBDIRECTORY(tests/group_fe_values)
+ADD_SUBDIRECTORY(tests/quadrature)
+ADD_SUBDIRECTORY(tests/shallowwater_ev_solution)
