work on doc and more work on migrating transport

--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -41,6 +41,10 @@ CONFIGURE_FILE(
 INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
 
 # serial targets
+ADD_EXECUTABLE(transport main.cc)
+TARGET_COMPILE_DEFINITIONS(transport PRIVATE TRANSPORT)
+DEAL_II_SETUP_TARGET(transport)
+
 ADD_EXECUTABLE(burgers main.cc)
 TARGET_COMPILE_DEFINITIONS(burgers PRIVATE BURGERS)
 DEAL_II_SETUP_TARGET(burgers)
@@ -54,6 +58,11 @@ TARGET_COMPILE_DEFINITIONS(shallowwater PRIVATE SHALLOWWATER)
 DEAL_II_SETUP_TARGET(shallowwater)
 
 # parallel targets
+ADD_EXECUTABLE(transport_parallel main.cc)
+TARGET_COMPILE_DEFINITIONS(transport_parallel PRIVATE TRANSPORT)
+TARGET_COMPILE_DEFINITIONS(transport_parallel PRIVATE IS_PARALLEL)
+DEAL_II_SETUP_TARGET(transport_parallel)
+
 ADD_EXECUTABLE(burgers_parallel main.cc)
 TARGET_COMPILE_DEFINITIONS(burgers_parallel PRIVATE BURGERS)
 TARGET_COMPILE_DEFINITIONS(burgers_parallel PRIVATE IS_PARALLEL)
