--- a/euler/CMakeLists.txt
+++ b/euler/CMakeLists.txt
@@ -96,6 +96,7 @@ ADD_CUSTOM_TARGET(release
 ENABLE_TESTING()
 ADD_SUBDIRECTORY(tests/group_fe_values)
 ADD_SUBDIRECTORY(tests/quadrature)
+ADD_SUBDIRECTORY(tests/transport_galerkin_solution)
 ADD_SUBDIRECTORY(tests/shallowwater_galerkin_solution)
 ADD_SUBDIRECTORY(tests/shallowwater_constant_solution)
 ADD_SUBDIRECTORY(tests/shallowwater_low_solution)
