started new tests for transport and started debugging failing tests

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -39,10 +39,10 @@ Burgers.cc
 Burgers.h
 BurgersMaxWaveSpeed.cc
 BurgersMaxWaveSpeed.h
-BurgersParameters.cc
-BurgersParameters.h
 BurgersProblemParameters.cc
 BurgersProblemParameters.h
+BurgersRunParameters.cc
+BurgersRunParameters.h
 CMakeVars.h
 CMakeVars.h.h
 ConservationLaw.cc
@@ -64,10 +64,10 @@ EntropyViscosity.cc
 EntropyViscosity.h
 Euler.cc
 Euler.h
-EulerParameters.cc
-EulerParameters.h
 EulerRiemannSolver.cc
 EulerRiemannSolver.h
+EulerRunParameters.cc
+EulerRunParameters.h
 Exceptions.h
 FCT.cc
 FCT.h
@@ -121,14 +121,14 @@ ShallowWaterMaxWaveSpeed.cc
 ShallowWaterMaxWaveSpeed.h
 ShallowWaterNoBC.cc
 ShallowWaterNoBC.h
-ShallowWaterParameters.cc
-ShallowWaterParameters.h
 ShallowWaterPostProcessor.cc
 ShallowWaterPostProcessor.h
 ShallowWaterProblemParameters.cc
 ShallowWaterProblemParameters.h
 ShallowWaterRiemannSolver.cc
 ShallowWaterRiemannSolver.h
+ShallowWaterRunParameters.cc
+ShallowWaterRunParameters.h
 ShallowWaterStarState.cc
 ShallowWaterStarState.h
 ShallowWaterSubcriticalOpenBC1D.cc
@@ -145,10 +145,10 @@ StarState.cc
 StarState.h
 Transport.cc
 Transport.h
-TransportParameters.cc
-TransportParameters.h
 TransportProblemParameters.cc
 TransportProblemParameters.h
+TransportRunParameters.cc
+TransportRunParameters.h
 Viscosity.cc
 Viscosity.h
 ViscosityMultiplier.cc
