--- a/transport/.gitignore
+++ b/transport/.gitignore
@@ -27,9 +27,6 @@ doxygen
 ConservationLawFlux.h
 EntropyViscosity.cc
 EntropyViscosity.h
-ExactSolutions.h
-Executioner.cc
-Executioner.h
 FCT.cc
 FCT.h
 LinearSolver.cc
@@ -38,23 +35,22 @@ LinearTransportFlux.cc
 LinearTransportFlux.h
 LowOrderViscosity.cc
 LowOrderViscosity.h
-MultiRegionExactSolution.cc
 NonlinearSolver.cc
 NonlinearSolver.h
+OldTransportParameters.h
 PostProcessor.cc
 PostProcessor.h
-RefinementHandler.cc
-RefinementHandler.h
 SSPRKTimeIntegrator.cc
 SSPRKTimeIntegrator.h
-SteadyStateExecutioner.cc
-SteadyStateExecutioner.h
 TimeIntegrator.h
-TransientExecutioner.cc
-TransientExecutioner.h
+TransportExecutioner.cc
+TransportExecutioner.h
 TransportParameters.cc
-TransportParameters.h
 TransportProblem.cc
 TransportProblem.h
+TransportSteadyStateExecutioner.cc
+TransportSteadyStateExecutioner.h
+TransportTransientExecutioner.cc
+TransportTransientExecutioner.h
 Viscosity.cc
 Viscosity.h
