continuing process of eliminating duplicate classes between codes

--- a/transport/.gitignore
+++ b/transport/.gitignore
@@ -37,9 +37,9 @@ LowOrderViscosity.cc
 LowOrderViscosity.h
 NonlinearSolver.cc
 NonlinearSolver.h
+OldPostProcessor.cc
+OldPostProcessor.h
 OldTransportParameters.h
-PostProcessor.cc
-PostProcessor.h
 SSPRKTimeIntegrator.cc
 SSPRKTimeIntegrator.h
 TimeIntegrator.h
